y.output
   0  $accept : file $end

   1  file : ficheiro

   2  ficheiro : programa
   3           | modulo

   4  $$1 :

   5  programa : PROGRAM START $$1 corpo END

   6  $$2 :

   7  programa : PROGRAM declaracoes START $$2 corpo END

   8  modulo : MODULE END
   9         | MODULE declaracoes END

  10  declaracoes : declaracao
  11              | declaracoes ';' declaracao

  12  declaracao : funcao
  13             | decltype tipo VARNAME literaltype
  14             | decltype tipo VARNAME '[' INTEGER ']' literaltype

  15  decltype : qualificador CONST
  16           | qualificador
  17           | CONST
  18           |

  19  literaltype : IEQ literal
  20              | IEQ inteiro ',' literalist
  21              | IEQ cadeias
  22              |

  23  literalist : inteiro
  24             | literalist ',' inteiro

  25  $$3 :

  26  $$4 :

  27  funcao : FUNCTION functype VARNAME $$3 argsopt $$4 funcdone

  28  funcdone : DONE
  29           | DO corpo

  30  functype : qualificador tipo
  31           | tipo

  32  tipo : NUMBER
  33       | ARRAY
  34       | STRING
  35       | VOID

  36  cadeias : iniciador iniciadores
  37          | STR

  38  iniciador : INTEGER
  39            | CHAR
  40            | STR

  41  inteiro : INTEGER
  42          | '-' INTEGER

  43  iniciadores : iniciador
  44              | iniciadores iniciador

  45  qualificador : PUBLIC
  46               | FORWARD

  47  argsopt :
  48          | args

  49  args : variavel
  50       | args ';' variavel

  51  variavel : tipo VARNAME '[' INTEGER ']'
  52           | tipo VARNAME

  53  corpo : varopt instructopt

  54  returns : RETURN
  55          | RETURN expressao
  56          |

  57  corpovar : variavel ';'
  58           | corpovar variavel ';'

  59  varopt :
  60         | corpovar

  61  literal : INTEGER
  62          | CHAR

  63  instrucao : IF expressao THEN instructopt elifopt FI
  64            | IF expressao THEN instructopt elifopt ELSE instructopt FI

  65  $$5 :

  66  $$6 :

  67  instrucao : FOR expressao UNTIL expressao STEP expressao DO $$5 instructopt $$6 DONE
  68            | expressao ';'
  69            | expressao '!'

  70  $$7 :

  71  instrucao : $$7 REPEAT

  72  $$8 :

  73  instrucao : $$8 STOP
  74            | leftvalue '#' expressao ';'

  75  instructopt : returns
  76              | instrucoes returns

  77  elifopt :
  78          | ELIF expressao THEN instructopt

  79  instrucoes : instrucao
  80             | instrucoes instrucao

  81  expressao : VARNAME
  82            | VARNAME '[' expressao ']'
  83            | INTEGER
  84            | cadeias
  85            | '?'
  86            | CHAR
  87            | VARNAME '(' expresionlist ')'
  88            | expressao '|' expressao
  89            | expressao '&' expressao
  90            | expressao '=' expressao
  91            | expressao '+' expressao
  92            | expressao '-' expressao
  93            | expressao '%' expressao
  94            | expressao '/' expressao
  95            | expressao GE expressao
  96            | expressao '>' expressao
  97            | expressao LE expressao
  98            | expressao '<' expressao
  99            | expressao NE expressao
 100            | expressao '^' expressao
 101            | expressao '*' expressao
 102            | leftvalue IEQ expressao
 103            | '(' expressao ')'
 104            | '&' leftvalue
 105            | '~' expressao
 106            | '-' expressao

 107  expresionlist : expressao
 108                | expresionlist ',' expressao

 109  leftvalue : VARNAME
 110            | VARNAME '[' expressao ']'

state 0
	$accept : . file $end  (0)

	MODULE  shift 1
	PROGRAM  shift 2
	.  error

	file  goto 3
	ficheiro  goto 4
	programa  goto 5
	modulo  goto 6


state 1
	modulo : MODULE . END  (8)
	modulo : MODULE . declaracoes END  (9)
	decltype : .  (18)

	FUNCTION  shift 7
	CONST  shift 8
	PUBLIC  shift 9
	FORWARD  shift 10
	END  shift 11
	VOID  reduce 18
	NUMBER  reduce 18
	ARRAY  reduce 18
	STRING  reduce 18

	funcao  goto 12
	qualificador  goto 13
	declaracoes  goto 14
	declaracao  goto 15
	decltype  goto 16


state 2
	programa : PROGRAM . START $$1 corpo END  (5)
	programa : PROGRAM . declaracoes START $$2 corpo END  (7)
	decltype : .  (18)

	FUNCTION  shift 7
	START  shift 17
	CONST  shift 8
	PUBLIC  shift 9
	FORWARD  shift 10
	VOID  reduce 18
	NUMBER  reduce 18
	ARRAY  reduce 18
	STRING  reduce 18

	funcao  goto 12
	qualificador  goto 13
	declaracoes  goto 18
	declaracao  goto 15
	decltype  goto 16


state 3
	$accept : file . $end  (0)

	$end  accept


state 4
	file : ficheiro .  (1)

	.  reduce 1


state 5
	ficheiro : programa .  (2)

	.  reduce 2


state 6
	ficheiro : modulo .  (3)

	.  reduce 3


state 7
	funcao : FUNCTION . functype VARNAME $$3 argsopt $$4 funcdone  (27)

	VOID  shift 19
	NUMBER  shift 20
	ARRAY  shift 21
	STRING  shift 22
	PUBLIC  shift 9
	FORWARD  shift 10
	.  error

	functype  goto 23
	qualificador  goto 24
	tipo  goto 25


state 8
	decltype : CONST .  (17)

	.  reduce 17


state 9
	qualificador : PUBLIC .  (45)

	.  reduce 45


state 10
	qualificador : FORWARD .  (46)

	.  reduce 46


state 11
	modulo : MODULE END .  (8)

	.  reduce 8


state 12
	declaracao : funcao .  (12)

	.  reduce 12


state 13
	decltype : qualificador . CONST  (15)
	decltype : qualificador .  (16)

	CONST  shift 26
	VOID  reduce 16
	NUMBER  reduce 16
	ARRAY  reduce 16
	STRING  reduce 16


state 14
	modulo : MODULE declaracoes . END  (9)
	declaracoes : declaracoes . ';' declaracao  (11)

	END  shift 27
	';'  shift 28
	.  error


state 15
	declaracoes : declaracao .  (10)

	.  reduce 10


state 16
	declaracao : decltype . tipo VARNAME literaltype  (13)
	declaracao : decltype . tipo VARNAME '[' INTEGER ']' literaltype  (14)

	VOID  shift 19
	NUMBER  shift 20
	ARRAY  shift 21
	STRING  shift 22
	.  error

	tipo  goto 29


state 17
	programa : PROGRAM START . $$1 corpo END  (5)
	$$1 : .  (4)

	.  reduce 4

	$$1  goto 30


state 18
	programa : PROGRAM declaracoes . START $$2 corpo END  (7)
	declaracoes : declaracoes . ';' declaracao  (11)

	START  shift 31
	';'  shift 28
	.  error


state 19
	tipo : VOID .  (35)

	.  reduce 35


state 20
	tipo : NUMBER .  (32)

	.  reduce 32


state 21
	tipo : ARRAY .  (33)

	.  reduce 33


state 22
	tipo : STRING .  (34)

	.  reduce 34


state 23
	funcao : FUNCTION functype . VARNAME $$3 argsopt $$4 funcdone  (27)

	VARNAME  shift 32
	.  error


state 24
	functype : qualificador . tipo  (30)

	VOID  shift 19
	NUMBER  shift 20
	ARRAY  shift 21
	STRING  shift 22
	.  error

	tipo  goto 33


state 25
	functype : tipo .  (31)

	.  reduce 31


state 26
	decltype : qualificador CONST .  (15)

	.  reduce 15


state 27
	modulo : MODULE declaracoes END .  (9)

	.  reduce 9


state 28
	declaracoes : declaracoes ';' . declaracao  (11)
	decltype : .  (18)

	FUNCTION  shift 7
	CONST  shift 8
	PUBLIC  shift 9
	FORWARD  shift 10
	VOID  reduce 18
	NUMBER  reduce 18
	ARRAY  reduce 18
	STRING  reduce 18

	funcao  goto 12
	qualificador  goto 13
	declaracao  goto 34
	decltype  goto 16


state 29
	declaracao : decltype tipo . VARNAME literaltype  (13)
	declaracao : decltype tipo . VARNAME '[' INTEGER ']' literaltype  (14)

	VARNAME  shift 35
	.  error


state 30
	programa : PROGRAM START $$1 . corpo END  (5)
	varopt : .  (59)

	VOID  shift 19
	NUMBER  shift 20
	ARRAY  shift 21
	STRING  shift 22
	INTEGER  reduce 59
	CHAR  reduce 59
	VARNAME  reduce 59
	STR  reduce 59
	IF  reduce 59
	FOR  reduce 59
	END  reduce 59
	REPEAT  reduce 59
	STOP  reduce 59
	RETURN  reduce 59
	'-'  reduce 59
	'&'  reduce 59
	'('  reduce 59
	'~'  reduce 59
	'?'  reduce 59

	variavel  goto 36
	corpo  goto 37
	corpovar  goto 38
	tipo  goto 39
	varopt  goto 40


state 31
	programa : PROGRAM declaracoes START . $$2 corpo END  (7)
	$$2 : .  (6)

	.  reduce 6

	$$2  goto 41


state 32
	funcao : FUNCTION functype VARNAME . $$3 argsopt $$4 funcdone  (27)
	$$3 : .  (25)

	.  reduce 25

	$$3  goto 42


state 33
	functype : qualificador tipo .  (30)

	.  reduce 30


state 34
	declaracoes : declaracoes ';' declaracao .  (11)

	.  reduce 11


state 35
	declaracao : decltype tipo VARNAME . literaltype  (13)
	declaracao : decltype tipo VARNAME . '[' INTEGER ']' literaltype  (14)
	literaltype : .  (22)

	IEQ  shift 43
	'['  shift 44
	START  reduce 22
	END  reduce 22
	';'  reduce 22

	literaltype  goto 45


state 36
	corpovar : variavel . ';'  (57)

	';'  shift 46
	.  error


state 37
	programa : PROGRAM START $$1 corpo . END  (5)

	END  shift 47
	.  error


state 38
	corpovar : corpovar . variavel ';'  (58)
	varopt : corpovar .  (60)

	VOID  shift 19
	NUMBER  shift 20
	ARRAY  shift 21
	STRING  shift 22
	INTEGER  reduce 60
	CHAR  reduce 60
	VARNAME  reduce 60
	STR  reduce 60
	START  reduce 60
	IF  reduce 60
	FOR  reduce 60
	END  reduce 60
	REPEAT  reduce 60
	STOP  reduce 60
	RETURN  reduce 60
	'-'  reduce 60
	'&'  reduce 60
	'('  reduce 60
	'~'  reduce 60
	'?'  reduce 60
	';'  reduce 60

	variavel  goto 48
	tipo  goto 39


state 39
	variavel : tipo . VARNAME '[' INTEGER ']'  (51)
	variavel : tipo . VARNAME  (52)

	VARNAME  shift 49
	.  error


state 40
	corpo : varopt . instructopt  (53)
	returns : .  (56)
	$$7 : .  (70)
	$$8 : .  (72)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	IF  shift 54
	FOR  shift 55
	RETURN  shift 56
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	START  reduce 56
	END  reduce 56
	REPEAT  reduce 70
	STOP  reduce 72
	';'  reduce 56

	expressao  goto 62
	returns  goto 63
	instrucoes  goto 64
	instructopt  goto 65
	instrucao  goto 66
	leftvalue  goto 67
	cadeias  goto 68
	iniciador  goto 69
	$$7  goto 70
	$$8  goto 71


state 41
	programa : PROGRAM declaracoes START $$2 . corpo END  (7)
	varopt : .  (59)

	VOID  shift 19
	NUMBER  shift 20
	ARRAY  shift 21
	STRING  shift 22
	INTEGER  reduce 59
	CHAR  reduce 59
	VARNAME  reduce 59
	STR  reduce 59
	IF  reduce 59
	FOR  reduce 59
	END  reduce 59
	REPEAT  reduce 59
	STOP  reduce 59
	RETURN  reduce 59
	'-'  reduce 59
	'&'  reduce 59
	'('  reduce 59
	'~'  reduce 59
	'?'  reduce 59

	variavel  goto 36
	corpo  goto 72
	corpovar  goto 38
	tipo  goto 39
	varopt  goto 40


state 42
	funcao : FUNCTION functype VARNAME $$3 . argsopt $$4 funcdone  (27)
	argsopt : .  (47)

	VOID  shift 19
	NUMBER  shift 20
	ARRAY  shift 21
	STRING  shift 22
	DO  reduce 47
	DONE  reduce 47

	args  goto 73
	argsopt  goto 74
	variavel  goto 75
	tipo  goto 39


state 43
	literaltype : IEQ . literal  (19)
	literaltype : IEQ . inteiro ',' literalist  (20)
	literaltype : IEQ . cadeias  (21)

	INTEGER  shift 76
	CHAR  shift 77
	STR  shift 53
	'-'  shift 78
	.  error

	literal  goto 79
	cadeias  goto 80
	iniciador  goto 69
	inteiro  goto 81


state 44
	declaracao : decltype tipo VARNAME '[' . INTEGER ']' literaltype  (14)

	INTEGER  shift 82
	.  error


state 45
	declaracao : decltype tipo VARNAME literaltype .  (13)

	.  reduce 13


state 46
	corpovar : variavel ';' .  (57)

	.  reduce 57


state 47
	programa : PROGRAM START $$1 corpo END .  (5)

	.  reduce 5


state 48
	corpovar : corpovar variavel . ';'  (58)

	';'  shift 83
	.  error


state 49
	variavel : tipo VARNAME . '[' INTEGER ']'  (51)
	variavel : tipo VARNAME .  (52)

	'['  shift 84
	DO  reduce 52
	DONE  reduce 52
	';'  reduce 52


state 50
	iniciador : INTEGER .  (38)
	expressao : INTEGER .  (83)

	INTEGER  reduce 38
	CHAR  reduce 38
	STR  reduce 38
	START  reduce 83
	FI  reduce 83
	THEN  reduce 83
	ELSE  reduce 83
	ELIF  reduce 83
	END  reduce 83
	UNTIL  reduce 83
	STEP  reduce 83
	DO  reduce 83
	DONE  reduce 83
	GE  reduce 83
	LE  reduce 83
	NE  reduce 83
	'^'  reduce 83
	'>'  reduce 83
	'<'  reduce 83
	'='  reduce 83
	'+'  reduce 83
	'-'  reduce 83
	'*'  reduce 83
	'/'  reduce 83
	'%'  reduce 83
	'&'  reduce 83
	'|'  reduce 83
	')'  reduce 83
	']'  reduce 83
	';'  reduce 83
	','  reduce 83
	'!'  reduce 83


state 51
	iniciador : CHAR .  (39)
	expressao : CHAR .  (86)

	INTEGER  reduce 39
	CHAR  reduce 39
	STR  reduce 39
	START  reduce 86
	FI  reduce 86
	THEN  reduce 86
	ELSE  reduce 86
	ELIF  reduce 86
	END  reduce 86
	UNTIL  reduce 86
	STEP  reduce 86
	DO  reduce 86
	DONE  reduce 86
	GE  reduce 86
	LE  reduce 86
	NE  reduce 86
	'^'  reduce 86
	'>'  reduce 86
	'<'  reduce 86
	'='  reduce 86
	'+'  reduce 86
	'-'  reduce 86
	'*'  reduce 86
	'/'  reduce 86
	'%'  reduce 86
	'&'  reduce 86
	'|'  reduce 86
	')'  reduce 86
	']'  reduce 86
	';'  reduce 86
	','  reduce 86
	'!'  reduce 86


state 52
	expressao : VARNAME .  (81)
	expressao : VARNAME . '[' expressao ']'  (82)
	expressao : VARNAME . '(' expresionlist ')'  (87)
	leftvalue : VARNAME .  (109)
	leftvalue : VARNAME . '[' expressao ']'  (110)

	'('  shift 85
	'['  shift 86
	START  reduce 81
	FI  reduce 81
	THEN  reduce 81
	ELSE  reduce 81
	ELIF  reduce 81
	END  reduce 81
	UNTIL  reduce 81
	STEP  reduce 81
	DO  reduce 81
	DONE  reduce 81
	GE  reduce 81
	LE  reduce 81
	NE  reduce 81
	'^'  reduce 81
	IEQ  reduce 109
	'>'  reduce 81
	'<'  reduce 81
	'='  reduce 81
	'+'  reduce 81
	'-'  reduce 81
	'*'  reduce 81
	'/'  reduce 81
	'%'  reduce 81
	'&'  reduce 81
	'|'  reduce 81
	')'  reduce 81
	']'  reduce 81
	';'  reduce 81
	','  reduce 81
	'!'  reduce 81
	'#'  reduce 109


state 53
	cadeias : STR .  (37)
	iniciador : STR .  (40)

	INTEGER  reduce 40
	CHAR  reduce 40
	STR  reduce 40
	START  reduce 37
	FI  reduce 37
	THEN  reduce 37
	ELSE  reduce 37
	ELIF  reduce 37
	END  reduce 37
	UNTIL  reduce 37
	STEP  reduce 37
	DO  reduce 37
	DONE  reduce 37
	GE  reduce 37
	LE  reduce 37
	NE  reduce 37
	'^'  reduce 37
	'>'  reduce 37
	'<'  reduce 37
	'='  reduce 37
	'+'  reduce 37
	'-'  reduce 37
	'*'  reduce 37
	'/'  reduce 37
	'%'  reduce 37
	'&'  reduce 37
	'|'  reduce 37
	')'  reduce 37
	']'  reduce 37
	';'  reduce 37
	','  reduce 37
	'!'  reduce 37


state 54
	instrucao : IF . expressao THEN instructopt elifopt FI  (63)
	instrucao : IF . expressao THEN instructopt elifopt ELSE instructopt FI  (64)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	.  error

	expressao  goto 87
	leftvalue  goto 88
	cadeias  goto 68
	iniciador  goto 69


state 55
	instrucao : FOR . expressao UNTIL expressao STEP expressao DO $$5 instructopt $$6 DONE  (67)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	.  error

	expressao  goto 89
	leftvalue  goto 88
	cadeias  goto 68
	iniciador  goto 69


state 56
	returns : RETURN .  (54)
	returns : RETURN . expressao  (55)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	START  reduce 54
	FI  reduce 54
	ELSE  reduce 54
	ELIF  reduce 54
	END  reduce 54
	DONE  reduce 54
	';'  reduce 54

	expressao  goto 90
	leftvalue  goto 88
	cadeias  goto 68
	iniciador  goto 69


state 57
	expressao : '-' . expressao  (106)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	.  error

	expressao  goto 91
	leftvalue  goto 88
	cadeias  goto 68
	iniciador  goto 69


state 58
	expressao : '&' . leftvalue  (104)

	VARNAME  shift 92
	.  error

	leftvalue  goto 93


state 59
	expressao : '(' . expressao ')'  (103)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	.  error

	expressao  goto 94
	leftvalue  goto 88
	cadeias  goto 68
	iniciador  goto 69


state 60
	expressao : '~' . expressao  (105)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	.  error

	expressao  goto 95
	leftvalue  goto 88
	cadeias  goto 68
	iniciador  goto 69


state 61
	expressao : '?' .  (85)

	.  reduce 85


state 62
	instrucao : expressao . ';'  (68)
	instrucao : expressao . '!'  (69)
	expressao : expressao . '|' expressao  (88)
	expressao : expressao . '&' expressao  (89)
	expressao : expressao . '=' expressao  (90)
	expressao : expressao . '+' expressao  (91)
	expressao : expressao . '-' expressao  (92)
	expressao : expressao . '%' expressao  (93)
	expressao : expressao . '/' expressao  (94)
	expressao : expressao . GE expressao  (95)
	expressao : expressao . '>' expressao  (96)
	expressao : expressao . LE expressao  (97)
	expressao : expressao . '<' expressao  (98)
	expressao : expressao . NE expressao  (99)
	expressao : expressao . '^' expressao  (100)
	expressao : expressao . '*' expressao  (101)

	GE  shift 96
	LE  shift 97
	NE  shift 98
	'^'  shift 99
	'>'  shift 100
	'<'  shift 101
	'='  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'&'  shift 108
	'|'  shift 109
	';'  shift 110
	'!'  shift 111
	.  error


state 63
	instructopt : returns .  (75)

	.  reduce 75


state 64
	instructopt : instrucoes . returns  (76)
	instrucoes : instrucoes . instrucao  (80)
	returns : .  (56)
	$$7 : .  (70)
	$$8 : .  (72)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	IF  shift 54
	FOR  shift 55
	RETURN  shift 56
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	START  reduce 56
	FI  reduce 56
	ELSE  reduce 56
	ELIF  reduce 56
	END  reduce 56
	DONE  reduce 56
	REPEAT  reduce 70
	STOP  reduce 72
	';'  reduce 56

	expressao  goto 62
	returns  goto 112
	instrucao  goto 113
	leftvalue  goto 67
	cadeias  goto 68
	iniciador  goto 69
	$$7  goto 70
	$$8  goto 71


state 65
	corpo : varopt instructopt .  (53)

	.  reduce 53


state 66
	instrucoes : instrucao .  (79)

	.  reduce 79


state 67
	instrucao : leftvalue . '#' expressao ';'  (74)
	expressao : leftvalue . IEQ expressao  (102)

	IEQ  shift 114
	'#'  shift 115
	.  error


state 68
	expressao : cadeias .  (84)

	.  reduce 84


state 69
	cadeias : iniciador . iniciadores  (36)

	INTEGER  shift 116
	CHAR  shift 117
	STR  shift 118
	.  error

	iniciadores  goto 119
	iniciador  goto 120


state 70
	instrucao : $$7 . REPEAT  (71)

	REPEAT  shift 121
	.  error


state 71
	instrucao : $$8 . STOP  (73)

	STOP  shift 122
	.  error


state 72
	programa : PROGRAM declaracoes START $$2 corpo . END  (7)

	END  shift 123
	.  error


state 73
	argsopt : args .  (48)
	args : args . ';' variavel  (50)

	';'  shift 124
	DO  reduce 48
	DONE  reduce 48


state 74
	funcao : FUNCTION functype VARNAME $$3 argsopt . $$4 funcdone  (27)
	$$4 : .  (26)

	.  reduce 26

	$$4  goto 125


state 75
	args : variavel .  (49)

	.  reduce 49


state 76
	iniciador : INTEGER .  (38)
	inteiro : INTEGER .  (41)
	literal : INTEGER .  (61)

	INTEGER  reduce 38
	CHAR  reduce 38
	STR  reduce 38
	START  reduce 61
	END  reduce 61
	';'  reduce 61
	','  reduce 41


state 77
	iniciador : CHAR .  (39)
	literal : CHAR .  (62)

	INTEGER  reduce 39
	CHAR  reduce 39
	STR  reduce 39
	START  reduce 62
	END  reduce 62
	';'  reduce 62


state 78
	inteiro : '-' . INTEGER  (42)

	INTEGER  shift 126
	.  error


state 79
	literaltype : IEQ literal .  (19)

	.  reduce 19


state 80
	literaltype : IEQ cadeias .  (21)

	.  reduce 21


state 81
	literaltype : IEQ inteiro . ',' literalist  (20)

	','  shift 127
	.  error


state 82
	declaracao : decltype tipo VARNAME '[' INTEGER . ']' literaltype  (14)

	']'  shift 128
	.  error


state 83
	corpovar : corpovar variavel ';' .  (58)

	.  reduce 58


state 84
	variavel : tipo VARNAME '[' . INTEGER ']'  (51)

	INTEGER  shift 129
	.  error


state 85
	expressao : VARNAME '(' . expresionlist ')'  (87)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	.  error

	expressao  goto 130
	leftvalue  goto 88
	expresionlist  goto 131
	cadeias  goto 68
	iniciador  goto 69


state 86
	expressao : VARNAME '[' . expressao ']'  (82)
	leftvalue : VARNAME '[' . expressao ']'  (110)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	.  error

	expressao  goto 132
	leftvalue  goto 88
	cadeias  goto 68
	iniciador  goto 69


state 87
	instrucao : IF expressao . THEN instructopt elifopt FI  (63)
	instrucao : IF expressao . THEN instructopt elifopt ELSE instructopt FI  (64)
	expressao : expressao . '|' expressao  (88)
	expressao : expressao . '&' expressao  (89)
	expressao : expressao . '=' expressao  (90)
	expressao : expressao . '+' expressao  (91)
	expressao : expressao . '-' expressao  (92)
	expressao : expressao . '%' expressao  (93)
	expressao : expressao . '/' expressao  (94)
	expressao : expressao . GE expressao  (95)
	expressao : expressao . '>' expressao  (96)
	expressao : expressao . LE expressao  (97)
	expressao : expressao . '<' expressao  (98)
	expressao : expressao . NE expressao  (99)
	expressao : expressao . '^' expressao  (100)
	expressao : expressao . '*' expressao  (101)

	THEN  shift 133
	GE  shift 96
	LE  shift 97
	NE  shift 98
	'^'  shift 99
	'>'  shift 100
	'<'  shift 101
	'='  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'&'  shift 108
	'|'  shift 109
	.  error


state 88
	expressao : leftvalue . IEQ expressao  (102)

	IEQ  shift 114
	.  error


state 89
	instrucao : FOR expressao . UNTIL expressao STEP expressao DO $$5 instructopt $$6 DONE  (67)
	expressao : expressao . '|' expressao  (88)
	expressao : expressao . '&' expressao  (89)
	expressao : expressao . '=' expressao  (90)
	expressao : expressao . '+' expressao  (91)
	expressao : expressao . '-' expressao  (92)
	expressao : expressao . '%' expressao  (93)
	expressao : expressao . '/' expressao  (94)
	expressao : expressao . GE expressao  (95)
	expressao : expressao . '>' expressao  (96)
	expressao : expressao . LE expressao  (97)
	expressao : expressao . '<' expressao  (98)
	expressao : expressao . NE expressao  (99)
	expressao : expressao . '^' expressao  (100)
	expressao : expressao . '*' expressao  (101)

	UNTIL  shift 134
	GE  shift 96
	LE  shift 97
	NE  shift 98
	'^'  shift 99
	'>'  shift 100
	'<'  shift 101
	'='  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'&'  shift 108
	'|'  shift 109
	.  error


state 90
	returns : RETURN expressao .  (55)
	expressao : expressao . '|' expressao  (88)
	expressao : expressao . '&' expressao  (89)
	expressao : expressao . '=' expressao  (90)
	expressao : expressao . '+' expressao  (91)
	expressao : expressao . '-' expressao  (92)
	expressao : expressao . '%' expressao  (93)
	expressao : expressao . '/' expressao  (94)
	expressao : expressao . GE expressao  (95)
	expressao : expressao . '>' expressao  (96)
	expressao : expressao . LE expressao  (97)
	expressao : expressao . '<' expressao  (98)
	expressao : expressao . NE expressao  (99)
	expressao : expressao . '^' expressao  (100)
	expressao : expressao . '*' expressao  (101)

	GE  shift 96
	LE  shift 97
	NE  shift 98
	'^'  shift 99
	'>'  shift 100
	'<'  shift 101
	'='  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'&'  shift 108
	'|'  shift 109
	START  reduce 55
	FI  reduce 55
	ELSE  reduce 55
	ELIF  reduce 55
	END  reduce 55
	DONE  reduce 55
	';'  reduce 55


state 91
	expressao : expressao . '|' expressao  (88)
	expressao : expressao . '&' expressao  (89)
	expressao : expressao . '=' expressao  (90)
	expressao : expressao . '+' expressao  (91)
	expressao : expressao . '-' expressao  (92)
	expressao : expressao . '%' expressao  (93)
	expressao : expressao . '/' expressao  (94)
	expressao : expressao . GE expressao  (95)
	expressao : expressao . '>' expressao  (96)
	expressao : expressao . LE expressao  (97)
	expressao : expressao . '<' expressao  (98)
	expressao : expressao . NE expressao  (99)
	expressao : expressao . '^' expressao  (100)
	expressao : expressao . '*' expressao  (101)
	expressao : '-' expressao .  (106)

	.  reduce 106


state 92
	leftvalue : VARNAME .  (109)
	leftvalue : VARNAME . '[' expressao ']'  (110)

	'['  shift 135
	START  reduce 109
	FI  reduce 109
	THEN  reduce 109
	ELSE  reduce 109
	ELIF  reduce 109
	END  reduce 109
	UNTIL  reduce 109
	STEP  reduce 109
	DO  reduce 109
	DONE  reduce 109
	GE  reduce 109
	LE  reduce 109
	NE  reduce 109
	'^'  reduce 109
	'>'  reduce 109
	'<'  reduce 109
	'='  reduce 109
	'+'  reduce 109
	'-'  reduce 109
	'*'  reduce 109
	'/'  reduce 109
	'%'  reduce 109
	'&'  reduce 109
	'|'  reduce 109
	')'  reduce 109
	']'  reduce 109
	';'  reduce 109
	','  reduce 109
	'!'  reduce 109


state 93
	expressao : '&' leftvalue .  (104)

	.  reduce 104


state 94
	expressao : expressao . '|' expressao  (88)
	expressao : expressao . '&' expressao  (89)
	expressao : expressao . '=' expressao  (90)
	expressao : expressao . '+' expressao  (91)
	expressao : expressao . '-' expressao  (92)
	expressao : expressao . '%' expressao  (93)
	expressao : expressao . '/' expressao  (94)
	expressao : expressao . GE expressao  (95)
	expressao : expressao . '>' expressao  (96)
	expressao : expressao . LE expressao  (97)
	expressao : expressao . '<' expressao  (98)
	expressao : expressao . NE expressao  (99)
	expressao : expressao . '^' expressao  (100)
	expressao : expressao . '*' expressao  (101)
	expressao : '(' expressao . ')'  (103)

	GE  shift 96
	LE  shift 97
	NE  shift 98
	'^'  shift 99
	'>'  shift 100
	'<'  shift 101
	'='  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'&'  shift 108
	'|'  shift 109
	')'  shift 136
	.  error


state 95
	expressao : expressao . '|' expressao  (88)
	expressao : expressao . '&' expressao  (89)
	expressao : expressao . '=' expressao  (90)
	expressao : expressao . '+' expressao  (91)
	expressao : expressao . '-' expressao  (92)
	expressao : expressao . '%' expressao  (93)
	expressao : expressao . '/' expressao  (94)
	expressao : expressao . GE expressao  (95)
	expressao : expressao . '>' expressao  (96)
	expressao : expressao . LE expressao  (97)
	expressao : expressao . '<' expressao  (98)
	expressao : expressao . NE expressao  (99)
	expressao : expressao . '^' expressao  (100)
	expressao : expressao . '*' expressao  (101)
	expressao : '~' expressao .  (105)

	.  reduce 105


state 96
	expressao : expressao GE . expressao  (95)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	.  error

	expressao  goto 137
	leftvalue  goto 88
	cadeias  goto 68
	iniciador  goto 69


state 97
	expressao : expressao LE . expressao  (97)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	.  error

	expressao  goto 138
	leftvalue  goto 88
	cadeias  goto 68
	iniciador  goto 69


state 98
	expressao : expressao NE . expressao  (99)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	.  error

	expressao  goto 139
	leftvalue  goto 88
	cadeias  goto 68
	iniciador  goto 69


state 99
	expressao : expressao '^' . expressao  (100)

	INTEGER  shift 50
	CHAR  shift 51
	VARNAME  shift 52
	STR  shift 53
	'-'  shift 57
	'&'  shift 58
	'('  shift 59
	'~'  shift 60
	'?'  shift 61
	.  error

	expressao  goto 140
	leftvalue  goto 88
	cadeias  goto 68
	iniciador  goto 69


state 100
	expressao : expressao '>' . expressao  (96)
